fix white gap when removing a project from list

--- a/jsapp/scss/components/_kobo.asset-row.scss
+++ b/jsapp/scss/components/_kobo.asset-row.scss
@@ -37,8 +37,10 @@
     transition: max-height 0.5s ease, opacity 0.5s ease;
     opacity: 0;
     max-height: 0px;
+    min-height: 0px;
     padding: 0px;
     border:none;
+    overflow: hidden;
   }
 
   .asset-row__celllink--name {
